1. Logik gehört in die Component (nichts ins Template)

--- a/book-rating/src/app/books/book/book.component.html
+++ b/book-rating/src/app/books/book/book.component.html
@@ -13,12 +13,11 @@
     <!---
     ⚠️⚠️⚠️ BAD PRACTICE ⚠️⚠️⚠️
 
-    1. Logik im Template
     2. Separation of Concerns (SoC)
     3. Objekt wird mutiert (Verstoß gegen Prinzip der Immutability)
     -->
 
-    <button class="btn btn-primary me-2" (click)="book.rating = book.rating - 1">-</button>
-    <button class="btn btn-primary" (click)="book.rating = book.rating + 1">+</button>
+    <button class="btn btn-primary me-2" (click)="doRateDown()">-</button>
+    <button class="btn btn-primary" (click)="doRateUp()">+</button>
   </div>
 </div>
