--- a/book-rating/src/app/books/book/book.component.html
+++ b/book-rating/src/app/books/book/book.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-4" *ngIf="book">
   <div class="card-body bg-light">
-      <img class="img-thumbnail float-end"
+      <img class="img-thumbnail float-end" alt="Bild mit Katzen"
         src="//api.angular.schule/avatar/{{ book.rating }}">
     <div class="card-title">
       <h2>
