--- a/book-rating/src/app/books/create-book/create-book.component.html
+++ b/book-rating/src/app/books/create-book/create-book.component.html
@@ -1,8 +1,8 @@
-<form >
+<form [formGroup]="bookForm">
 
   <div class="form-group">
     <label for="isbn">ISBN</label>
-    <input type="text" class="form-control" id="isbn">
+    <input formControlName="isbn" type="text" class="form-control" id="isbn">
 
     <div *ngIf="false"
       class="feedback-error">Die ISBN ist ungültig.
@@ -12,12 +12,12 @@
 
   <div class="form-group">
     <label for="title">Titel</label>
-    <input type="text" class="form-control" id="title">
+    <input formControlName="title" type="text" class="form-control" id="title">
   </div>
 
   <div class="form-group">
     <label for="description">Beschreibung</label>
-    <textarea class="form-control" id="description"></textarea>
+    <textarea formControlName="description" class="form-control" id="description"></textarea>
   </div>
 
   <button
