about Epoch Unix Timestamp --> https://www.unixtimestamp.com/

--- a/book-rating/src/app/app.component.html
+++ b/book-rating/src/app/app.component.html
@@ -12,4 +12,7 @@
 
   <!-- <router-outlet></router-outlet> -->
 
+  getMillisecond: {{ time.getTime()  }}<br>
+  timeAsNumber: {{ timeAsNumber | date }}
+
 </div>
