--- a/book-rating/src/app/books/create-book/create-book.component.html
+++ b/book-rating/src/app/books/create-book/create-book.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="bookForm">
+<form [formGroup]="bookForm" (ngSubmit)="submitForm()">
 
   <div class="form-group">
     <label for="isbn">ISBN</label>
