--- a/book-rating/src/app/books/book/book.component.html
+++ b/book-rating/src/app/books/book/book.component.html
@@ -11,7 +11,9 @@
     <p>{{ book.description }}</p>
 
     <button [disabled]="book.rating < 2" class="btn btn-primary me-2" (click)="doRateDown()">-</button>
-    <button [disabled]="book.rating > 4" class="btn btn-primary" (click)="doRateUp()">+</button>
+    <button [disabled]="book.rating > 4" class="btn btn-primary me-2" (click)="doRateUp()">+</button>
+
+    <a [routerLink]="['/books', book.isbn]" class="btn btn-secondary">Details</a>
   </div>
 </div>
 
