--- a/book-rating/src/app/books/book-details/book-details.component.html
+++ b/book-rating/src/app/books/book-details/book-details.component.html
@@ -1,1 +1,4 @@
 <p>book-details works!</p>
+
+<a routerLink="/books/9783864907791">Angular Buch</a><br>
+<a routerLink="/books/9783960091417">GitHub Buch</a><br>
