--- a/rxjs-playground/src/app/exercises/multicast/multicast.component.html
+++ b/rxjs-playground/src/app/exercises/multicast/multicast.component.html
@@ -11,6 +11,9 @@
       </div>
       <div class="card-body text-center">
         <h4>{{ measureValues$ | async | number:'1.4-4' }}</h4>
+        <div *ngIf="!(measureValues$ | async)">
+          SOLLTE NICHT PASSIEREN!!
+        </div>
       </div>
     </div>
   </div>
