--- a/book-rating/src/app/books/book-details/book-details.component.html
+++ b/book-rating/src/app/books/book-details/book-details.component.html
@@ -1,7 +1,10 @@
-<h1>{{ book$ | async | json }}</h1>
+<ng-container *ngIf="book$ | async as book">
 
+  <h1>{{ book.title }}</h1>
+  <p>{{ book.description }}</p>
 
-<p>book-details works!</p>
+</ng-container>
 
 <a routerLink="/books/9783864907791">Angular Buch</a><br>
 <a routerLink="/books/9783960091417">GitHub Buch</a><br>
+<a routerLink="/books/404">404 Buch</a><br>
