ngrx: selects + effects

--- a/book-rating/src/app/books/dashboard/dashboard.component.html
+++ b/book-rating/src/app/books/dashboard/dashboard.component.html
@@ -2,9 +2,16 @@
   (create)="addBook($event)"
 ></br-create-book>
 
+<h3 *ngIf="loading$ | async">
+  Lade Bücher...
+</h3>
+
 <br-book
-  *ngFor="let b of books"
+  *ngFor="let b of books$ | async"
   [book]="b"
   (rateDown)="doRateDown($event)"
   (rateUp)="doRateUp($event)"
 ></br-book>
+
+
+Anzahl der Bücher: {{ (books$ | async)?.length }}
